2006-02-03 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Honor TCA default value for TCA-driven multiple checkboxes. Thanks to Simon Tuck.
	* Remove support for TYPO3 3.5.0.
	
2006-01-30 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Verify enabled fields when selecting MM relations, in particular module_sys_dmail_category.
	* Accept value '0' on required fields (see bugtracker issue #2027).
	
2006-01-30 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Correction to css-styled html template (see bugtracker issue #2403).
	* Remove changes to the TCA for fields module_sys_dmail_category and module_sys_dmail_html
	* Ignore fields module_sys_dmail_category and module_sys_dmail_html is direct_mail extension is not loaded.
	* Enable support for select fields with MM relations, in particular module_sys_dmail_category.

2006-01-14 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.5:
	* Correction to the useEmailAsUsername property: when set, the username was erased on editing the profile.

2006-01-10 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.4:
	* Correction to the generateUsername property: when set, the username was erased on editing the profile.
	* For TCA-driven select fields, if no default value is set in TS template, apply default value from TCA, if present.

2006-01-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.3:
	* Update to Danish, Norwegian and Turkish translations.

2006-01-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.2.3:
	* Allow to override TCA labels in TS template setup
	* Add generateUsername setup property.
	* Add registrationProcess_beforeConfirmCreate hook. Thanks to Pieter Verstraelen.

2005-12-05  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>