@@ -176,5 +176,8 @@ plugin.tx_srfeuserregister_pi1 {
 
     # cat=plugin.tx_srfeuserregister_pi1/enable; type=boolean; label= Enable md5-hashed password: If set and if extension kb_md5fepw is installed, password will be md5-hashed.
   useMd5Password = 1
+  
+      # cat=plugin.tx_srfeuserregister_pi1//; type=string; label= PID list for Direct Mail categories: The Direct mail categories used by the plugin will be restricted to those found in these PID's.
+  module_sys_dmail_category_PIDLIST =
 
 }
